# video-materialization

./: .gitignore  AGENTS.md  CLAUDE.md  METHODOLOGY.md  PLAN.md  RUN.md  paper  pyproject.toml
.claude/: settings.local.json
.cursor/commands/: gc.md
scripts/: deploy.sh  run-gepa-eval-inner.sh  run-gepa-inner.sh  run-gepa.sh  sync-results.sh
src/vm/: builders.py  cache.py  config.py  dataset.py  duration.py  evaluator.py  genai_config.py  genai_response.py  gepa_optimizer.py  main.py  policies.py  retry.py  router.py  runner.py  segmenter.py  tokens.py
