[project]
name = "video-materialize"
version = "0.1.0"
description = "Video materialization policy experiments for repeated-query video QA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "google-genai>=1.70.0",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "vl-convert-python>=1.8.0",
    "rich>=13.0.0",
    "yt-dlp>=2026.3.17",
    "gepa>=0.1.1",
    "litellm>=1.83.13",
    "cloudpickle>=3.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vm"]
